server/wp-content/themes/ct/style.css
/* ... */
#content ul li:nth-last-child(1){
	margin: 0;
}
.btn_text{
	float: left;
	width: 100%;
	text-align: center;
}
.content_btn_arrow{
	position: relative;
	width: 10px;
	height: 20px;
	background: url(img/content_btn_arrow.png) no-repeat;
	left: 266px;
}

/* -- CLIENTS --*/
#clients{
	float: left;
	width: 100%;
	padding: 24px 0 41px 0;
	box-shadow: inset 0px 18px 20px -13px rgba(0,0,0,.2);
}
#clients_header{
	float: left;
	width: 100%;
	text-align: center;
	text-transform: uppercase;
	font-family: exomedium, Arial, sans-serif;
	font-size: 24px;
	line-height: 24px;
	color: #FF3D00;
	margin-bottom: 38px;
}
#clients_line {
	display: none;
}
#clients_area{
	width: 1084px;
	margin: 0 auto;
}
.clients_btn{
	width: 42px;
	height: 43px;
	float: left;
	margin-top: 10px;
}
.clients_btn:hover{
	cursor: pointer;
}
.clients_btn.left{
	background: url(img/clients_btn_left.png) no-repeat;
}
.clients_btn.right{
	background: url(img/clients_btn_right.png) no-repeat;
}
#clients_scrollable{
	float: left;
	width: 1000px;
	height: 70px;
	overflow-x: hidden;
}
#clients_scrollable ul{
	float: left;
	list-style: none;
	width: 6400px;
	overflow-x: hidden;
}
#clients_scrollable ul li{
	float: left;
	height: 70px;
	width: 200px;
}
.clients1{
	background: url(img/clients/c1.png);
}
.clients2{
	background: url(img/clients/c2.png);
}
.clients3{
	background: url(img/clients/c3.png);
}
.clients4{
	background: url(img/clients/c4.png);
}
.clients5{
	background: url(img/clients/c5.png);
}
.clients6{
	background: url(img/clients/c6.png);
}
.clients7{
	background: url(img/clients/c7.png);
}
.clients8{
	background: url(img/clients/c8.png);
}
.clients9{
	background: url(img/clients/c9.png);
}
.clients10{
	background: url(img/clients/c10.png);
}
.clients11{
	background: url(img/clients/c11.png);
}
.clients12{
	background: url(img/clients/c12.png);
}
.clients13{
	background: url(img/clients/c13.png);
}
.clients14{
	background: url(img/clients/c14.png);
}
.clients15{
	background: url(img/clients/c15.png);
}
.clients16{
	background: url(img/clients/c16.png);
}
.clients17{
	background: url(img/clients/c17.png);
}
.clients18{
	background: url(img/clients/c18.png);
}
.clients19{
	background: url(img/clients/c19.png);
}
.clients20{
	background: url(img/clients/c20.png);
}
.clients21{
	background: url(img/clients/c21.png);
}
.clients22{
	background: url(img/clients/c22.png);
}
.clients23{
	background: url(img/clients/c23.png);
}
.clients24{
	background: url(img/clients/c24.png);
}
.clients25{
	background: url(img/clients/c25.png);
}
.clients26{
	background: url(img/clients/c26.png);
}
.clients27{
	background: url(img/clients/c27.png);
}
.clients28{
	background: url(img/clients/c28.png);
}
.clients29{
	background: url(img/clients/c29.png);
}
.clients30{
	background: url(img/clients/c30.png);
}

/* -- BOTTOM -- */
#bottom{
	float: left;
	width: 100%;
	background: #FF3D00 url(img/bottom_bg.png) no-repeat top right;
	box-shadow: inset 0px 18px 20px -13px rgba(0,0,0,.2);
	padding: 48px 0 114px 0;
}
#table{
	display: table;
	margin: 0 auto;
	color: #fff;
	clear: both;
	padding-bottom: 25px;
}
#bottom_left{
	display: table-row;
	float: left;
	width: 300px;
	text-align: right;
	font-family: exoextra_light, Arial, sans-serif;
	font-size: 42px;
	line-height: 42px;
}
#bottom_center{
	float: left;
	width: 300px;
}
#round_logo{
	width: 125px;
	height: 126px;
	background: url(img/round_logo.png) no-repeat;
	margin: 0 auto;
	border-radius: 194px / 36px;
	padding-bottom: 15px;
}
#logo_shadow{
	margin: 0 auto;
	width: 246px;
	height: 17px;
	background: url(img/bottom_logo_shadow.png) no-repeat;
}
#bottom_right{
	display: table-row;
	float: left;
	width: 300px;
}
.bottom_header{
	font-family: exobold, Arial, sans-serif;
	font-size: 18px;
	font-weight: 100;
	margin: 0;
}
.bottom_text{
	font-family: exomedium, Arial, sans-serif;
	font-size: 12px;
	line-height: 1.6;
}
.bottom_text a{
	color: white;
}

#copyright{
	width: 100%;
	text-transform: uppercase;
	color: #fff;
	margin: 0 auto;
	text-align: center;
	padding-bottom: 50px;
}
#bottom_button{
	width: 42px;
	height: 41px;
	margin: 0 auto;
	background: url(img/bottom_button.png);
}
#bottom_button:hover{
	cursor: pointer;
}
/* -- LANGUAGE SPECIFIC -- */
.menu ul li a:lang(ru),
#wrapper h1:lang(ru),
#wrapper p:lang(ru),
#wrapper h2:lang(ru),
#content ul li a:lang(ru),
#clients_header:lang(ru),
#bottom_left:lang(ru),
.bottom_text:lang(ru){
	font-family: 'Exo 2', Arial, sans-serif;
	font-family: exo_cyrillicregular, Arial, sans-serif;
}
.menu ul li a:lang(ru){
	padding: 0px 16px;
	line-height: 34px;
	height: 55px;
}
#title:lang(ru){
	font-family: pt_sansitalic, Arial, sans-serif;
}
/* -- MEDIA QUERIES -- */
@media only screen and (max-width: 1280px) {
	#logo {
		margin-left: 40px;
	}
	#search{
		display: none;
	}
	#language{
		right: 5px;
	}
	#content {
		box-shadow: none;
		text-shadow: 1px 1px 1px #000;
	}
	#title{
		font-size: 122px;
		line-height: 172px;
	}
	#content ul li{
		margin-right: 23px;
	}
	#content ul li a{
		padding: 13px 0px 13px 0px;
	}
	.content_btn_arrow{
		left: 245px;
	}
	/*CLIENTS*/
	#clients_area{
		width: 884px;
		margin: 0 auto;
	}
	#clients_header{
		margin: 0 auto;
		padding-bottom: 15px;
	}
	.clients_btn.left{
		clear: left;
	}
	.clients_btn.right{
		float: right;
	}
	#clients_scrollable{
		width: 800px;
		margin: 0 auto;
	}
}

@media only screen and (min-width: 1281px) {
	.menu ul{
		display: block !important;
	}
}

@media only screen and (min-width: 960px) and (max-width: 1280px) {
	.container{
		width: 930px;
	}
	#wrapper .container{
	width: 930px;
	}	

	/* TOP */
	.menu{
		float: left;
		width: 100%;
		margin: 0;
	}
	.menu ul{
		width: 902px;
		margin: 0 auto;
		float: none;
		display: block !important;
	}

	/* CONTENT */
	#content ul{
		margin: 0 auto;
		width: 877px;
	}
}
/* ... */

